fix: change dropdown background to white in contrast mode

--- a/packages/dropdown/src/DropdownList.scss
+++ b/packages/dropdown/src/DropdownList.scss
@@ -53,6 +53,7 @@
   .eds-contrast & {
     color: $colors-brand-blue;
     border-color: $colors-blues-blue30;
+    background-color: $colors-brand-white;
   }
 
   &--highlighted  {
